--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,9 +31,9 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     {% if session["user_id"] %}
                         <ul class="navbar-nav me-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/quote">Quote</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/buy">Buy</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/sell">Sell</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/schedule">Schedule</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/members">Members</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/trainers">Trainers</a></li>
                             <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
