--- a/templates/login.html
+++ b/templates/login.html
@@ -9,9 +9,15 @@
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
         </div>
+        <p>{{message1}}</p>
         <div class="mb-3">
             <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
         </div>
+        <p>{{message2}}</p>
         <button class="btn btn-primary" type="submit">Log In</button>
+        
     </form>
+    
+    
+    <p>{{message3}}</p>
 {% endblock %}
