--- a/static/styles.css
+++ b/static/styles.css
@@ -11,13 +11,11 @@ nav .navbar-brand .blue
 }
 nav .navbar-brand .red
 {
-    color: #000000;
-    
+    color: #ea433b;
 }
 nav .navbar-brand .yellow
 {
-    color: #8b8b00;
-    
+    color: #f5b82e;
 }
 nav .navbar-brand .green
 {
@@ -27,4 +25,23 @@ nav .navbar-brand .green
 {
     margin-top:5%;
     margin-bottom:5%;
+}
+/*.btn-default
+{
+    padding-top: 1%;
+    padding-bottom: 1%;
+    margin-bottom: 2%;
+}*/
+h2
+{
+    
+    margin-bottom: -5%;
+    margin-right: 80%;
+}
+#add
+{
+    margin-top: 3%;
+    margin-bottom: 3%;
+    margin-left:80%;
+   
 }
