--- a/templates/members.html
+++ b/templates/members.html
@@ -5,20 +5,66 @@
 {% endblock %}
 {% block main %}
 
-<h1>Members List</h1>
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Add New member</button>
+<h2>MEMBERS LIST</h2>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" id="add">
+  Add New Member
+</button>
 
-<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-xl">
     <div class="modal-content">
-      ...
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Add Member</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        
+        <table>
+          <form action="/members" method="post">
+            
+            <tr>
+              <td>
+            <div class="mb-3">
+                <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text" required>
+            </div>
+          </td>
+          <td>
+            <div class="mb-3">
+                <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="mail" name="mail" placeholder="your email" type="mail" required>
+            </div>
+          </td>
+          </tr>
+          <tr>
+            <td>
+            <div class="mb-3">
+                <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password" required>
+            </div>
+          </td>
+          <td>
+            <div class="mb-3">
+                <input class="form-control mx-auto w-auto" id="confirmation" name="confirmation" placeholder="Confirm Password" type="password" required>
+            </div>
+          </td>
+          </tr>
+          <tr>
+            <td colspan="2">
+            <button  class="btn btn-default" type="submit">Add</button>
+            </td>
+          </tr>
+        </form>
+      </table>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
     </div>
   </div>
 </div>
 
-<table class="table table-striped">
-   
-  </form>
+  <table class="table table-striped">
     <thead>
       <tr>
 
