fixing some css and html

--- a/templates/members.html
+++ b/templates/members.html
@@ -27,24 +27,24 @@
             <tr>
               <td>
             <div class="mb-3">
-                <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text" required>
+                <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id=cl_Fname" name="cl_Fname" placeholder="First Name" type="text" required>
             </div>
           </td>
           <td>
             <div class="mb-3">
-                <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="mail" name="mail" placeholder="your email" type="mail" required>
+                <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="cl_Lname" name="cl_Lname" placeholder="Last Name" type="text" required>
             </div>
           </td>
           </tr>
           <tr>
             <td>
             <div class="mb-3">
-                <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password" required>
+                <input class="form-control mx-auto w-auto" id="cl_num" name="cl_num" placeholder="Phone Number" type="number" required>
             </div>
           </td>
           <td>
             <div class="mb-3">
-                <input class="form-control mx-auto w-auto" id="confirmation" name="confirmation" placeholder="Confirm Password" type="password" required>
+                <input class="form-control mx-auto w-auto" id="cl_BD" name="cl_BD" placeholder="Birth Date" type="date" required>
             </div>
           </td>
           </tr>
