--- a/templates/members.html
+++ b/templates/members.html
@@ -4,14 +4,27 @@
     Members
 {% endblock %}
 {% block main %}
-<p>{{message1}}</p>
-  <p>{{message2}}</p>
-  <p>{{message3}}</p>
+{% if message1 or message3 or message4 %}
+<div class="alert alert-danger" role="alert">
+  {{message1}}
+  {{message3}}
+  {{message4}}
+
+</div>
+{% endif %}
+{% if message2 or message5 or message6 %}
+<div class="alert alert-success" role="alert">
+  {{message2}}
+  {{message5}}
+  {{message6}}
+</div>
+{% endif %}
 <h2>MEMBERS LIST</h2>
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" id="add">
   Add New Member
 </button>
+
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -24,7 +37,7 @@
       <div class="modal-body">
         
         <table border="2" width="100%">
-          <form action="/members" method="post">
+          <form action="/members" method="post" id="myForm">
             
             <tr>
               <td >
@@ -69,16 +82,87 @@
           </td></tr>
           <tr>
             <td colspan="2">
-            <button  class="btn btn-secondary" type="submit">Add</button>
+            
             </td>
           </tr>
-        </form>
+        
       </table>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+      <div class="card">
+        <div class="card-header" id="headingTwo">
+          <h5 class="mb-0">
+            <button class="btn btn-link collapsed" id="add_m" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" type="button">
+             <h1 class="modal-title fs-5"  >+ Add Membership</h1>
+            </button>
+          </h5>
+        </div>
+        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+          <div class="card-body">
+            <table border="2" width="100%">
+              
+                
+                <tr>
+                  <td >
+                    
+                <div class="mb-3">
+                  <label for="selectOption" id="label">Select a Sport:</label>
+                  <select class="form-control" id="sp_name" name="sp_name" >
+                    {% for s in sport %}
+                    <option value="{{s.sp_name}}" >{{s.sp_name}}</option>
+                    {% endfor %}
+                  </select>
+                </div>
+              </td>
+              <td >
+                
+                <div class="mb-3">
+                    <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="m_type" name="m_type" placeholder="Membership Type" type="text" >
+                </div>
+              </td>
+              </tr>
+              <tr>
+                <td >
+                <div class="mb-3">
+                    <input class="form-control mx-auto w-auto" id="duration" name="duration" placeholder="Duration" type="text" >
+                </div>
+              </td>
+              <td >
+                <div class="mb-3">
+                    <input class="form-control mx-auto w-auto" id="price" name="price" placeholder="Price" type="text" >
+                </div>
+              </td>
+              <td >
+                <div class="mb-3">
+                    <input class="form-control mx-auto w-auto" id="starts_at" name="starts_at" placeholder="Starts At" type="Date" >
+                </div>
+              </td>
+              
+              </tr>
+    
+             
+              <tr><td>
+              
+              </td></tr>
+              <tr>
+                <td colspan="2">
+                
+                </td>
+              </tr>
+            
+          </table>
+          </div>
+           
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary">Add</button>
+        </div>
+      </form>
       </div>
+      
+      
+    
     </div>
   </div>
 </div>
