making a view so more optimized

--- a/templates/members.html
+++ b/templates/members.html
@@ -198,7 +198,7 @@
           
           
       </td>
-      <td> <button type="button" class="custom-button" id="view">view</button>  <button type="button" class="custom-button" id="edit" >Edit</button>  <button type="button" id="delete" class="custom-button" >Delete</button></td>
+      <td> <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" id="view">view</button>  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" id="edit" >Edit</button>  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" id="delete" >Delete</button></td>
       
 
 
