--- a/static/styles.css
+++ b/static/styles.css
@@ -85,3 +85,34 @@ td
    /* border: solid black;*/
     padding:20px;
 }
+span > ul > li
+{
+    text-align: left;
+    font-family:Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    
+    
+   
+    /*border: solid black;*/
+   
+    
+}
+span > ul
+{
+    /*border: solid black;*/
+    float:left;
+    width:28%;
+}
+#member_detail
+{
+    float:left;
+    margin-left:10px;
+    padding-left:10px;
+    width:70%;
+    /*border: solid black;*/
+
+}
+.title{
+    text-align:left;   
+    
+}
