finishing the member tab by adding the delete and the add membership option

--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,9 @@
 {% block title %}
     Log In
 {% endblock %}
+{% block script %} 
 
+{% endblock %}
 {% block main %}
     <form action="/login" method="post">
         <div class="mb-3">
@@ -21,3 +23,5 @@
     
     <p>{{message3}}</p>
 {% endblock %}
+
+
