--- a/static/styles.css
+++ b/static/styles.css
@@ -147,3 +147,12 @@ span > ul
     
    
 }
+#add_n_m
+{
+    width: 40%;
+    
+    padding: 5px 10px;
+    border-radius: 20px;
+    font-size: 14px;
+    font-weight: bold;
+}
