--- a/templates/members.html
+++ b/templates/members.html
@@ -12,12 +12,13 @@
 
 </div>
 {% endif %}
-{% if message2 or message5 or message6 or message7 %}
+{% if message2 or message5 or message6 or message7 or message8%}
 <div class="alert alert-success" role="alert">
   {{message2}}
   {{message5}}
   {{message6}}
   {{message7}}
+  {{message8}}
 </div>
 {% endif %}
 <h2>MEMBERS LIST</h2>
@@ -40,11 +41,11 @@
         <table border="2" width="100%">
           <form action="/members" method="post" id="myForm">
           
-            <input type="hidden" name="form_id" value="form1">
+            <input type="hidden" name="form_id" value="form1m">
             <tr>
               <td >
             <div class="mb-3">
-                <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id=cl_Fname" name="cl_Fname" placeholder="First Name" type="text" required>
+                <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="cl_Fname" name="cl_Fname" placeholder="First Name" type="text" required>
             </div>
           </td>
           <td >
@@ -387,6 +388,34 @@
             </div>
           </div>
         </div>
+        <!-- model delete-->
+<div class="modal fade" id="delete{{loop.index}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Delete {{m.cl_Fname}} {{m.cl_Lname}} number:{{m.cl_num}}</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+          
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="alert alert-warning" role="alert">
+          Are you sure you want to delete this Member ?
+        </div>
+        
+        <form action="/members" method="post" id="myForm">
+          <input type="hidden" name="cl_id" value="{{m.cl_id}}">
+          <input type="hidden" name="form_id" value="form3">
+        
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="submit" class="btn btn-primary">Delete</button>
+      </form>
+    </div>
+    </div>
+  </div>
+</div>
         
         
 
@@ -404,10 +433,95 @@
         <td> {{client.cl_num}}</td>
         <td> {{client.cl_BD}}</td>
         <td> {{client.student}}</td>
-        <td><span class="status-badge no_membership">No membership</span></td>
+        <td> <button type="button" id="add_n_m" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addmembership" id="add_membership">
+          Add 
+        </button>
+      <!-- Button trigger modal -->
+
+
+
+<!-- Modal add membership only -->
+<div class="modal fade" id="addmembership" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+          
+        </button>
+      </div>
+      <div class="modal-body">
+        <table border="2" width="100%">
+          <form action="/members" method="post" id="myForm">
+            <input type="hidden" name="cl_id" value="{{client.cl_id}}">
+            <input type="hidden" name="form_id" value="form1cl">
+            <tr>
+              <td >
+                
+            <div class="mb-3">
+              <label for="selectOption" id="label">Select a Sport:</label>
+              <select class="form-control" id="sp_name" name="sp_name" >
+                <option value="">˅</option>
+                {% for s in sport %}
+                
+                <option value="{{s.sp_name}}" >{{s.sp_name}}</option>
+                {% endfor %}
+              </select>
+            </div>
+          </td>
+          <td >
+            
+            <div class="mb-3">
+                <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="m_type" name="m_type" placeholder="Membership Type" type="text" >
+            </div>
+          </td>
+          </tr>
+          <tr>
+            <td >
+            <div class="mb-3">
+                <input class="form-control mx-auto w-auto" id="duration" name="duration" placeholder="Duration" type="text" >
+            </div>
+          </td>
+          <td >
+            <div class="mb-3">
+                <input class="form-control mx-auto w-auto" id="price" name="price" placeholder="Price" type="text" >
+            </div>
+          </td>
+          <td >
+            <div class="mb-3">
+                <input class="form-control mx-auto w-auto" id="starts_at" name="starts_at" placeholder="Starts At" type="Date" >
+            </div>
+          </td>
+          
+          </tr>
+
+         
+          <tr><td>
+          
+          </td></tr>
+          <tr>
+            <td colspan="2">
+            
+            </td>
+          </tr>
+        
+      </table>
+
+      </div>
+    
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="submit" class="btn btn-primary">Add</button>
+      </div>
+      </div>
+    </form>
+    </div>
+  </div>
+
+      </td>
         <td> <button type="button" class="custom-button" data-bs-toggle="modal" data-bs-target="#view{{loop.index}}" id="view">view</button> 
            <button type="button" class="custom-button" data-bs-toggle="modal" data-bs-target="#editc{{loop.index}}" id="edit" >Edit</button> 
-            <button type="button" id="delete" class="custom-button" >Delete</button>
+            <button type="button" id="delete" class="custom-button" data-bs-toggle="modal" data-bs-target="#delete{{loop.index}}">Delete</button>
         <!--modal view-->
 
 
@@ -431,10 +545,9 @@
                     <li>Student ? : {{client.student}}</li>
                   
               </ul>
-              <p>No Membership yet</p>
-              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="" id="add_membership">
-                Add New Membership
-              </button>
+              
+              <span class="status-badge no_membership">No membership</span>
+              
 
             </span>
             </div>
@@ -504,6 +617,7 @@
                   </tr>
                 
               </table>
+              
               </div>
               
                 <div class="modal-footer">
@@ -517,13 +631,40 @@
             
             </div>
           </div>
-        </div>
         
-         
+        
+           <!--model delete-->
+           <div class="modal fade" id="delete{{loop.index}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Delete {{client.cl_Fname}} {{client.cl_Lname}} number:{{client.cl_num}}</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                    
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <div class="alert alert-warning" role="alert">
+                    Are you sure you want to delete this Member ?
+                  </div>
+                  
+                  <form action="/members" method="post" id="myForm">
+                    <input type="hidden" name="cl_id" value="{{client.cl_id}}">
+                    <input type="hidden" name="form_id" value="form3">
+                  
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  <button type="submit" class="btn btn-primary">Delete</button>
+                </form>
+              </div>
+              </div>
+            </div>
+          </div>
+             
       </td>
         </tr>
-        
-        
+   
 
             
           
